Refactored System Tables Names
- Refactored System Table names in config.js and in all project.

--- a/public_html/lang/en-us.lang.json
+++ b/public_html/lang/en-us.lang.json
@@ -27,7 +27,7 @@
 		},
 		"btnNotifications": 	"Notifications",
 		"btnLang":				"Language",
-		"menuMyAccount":		"My Account",
+		"menuProfile":			"Profile",
 		"menuInvoices":			"Invoices",
 		"menuSignOut":			"Sign Out",
 		"msgSelectLanguage":	"Please select your language",
