--- a/public_html/lang/pt-br.lang.json
+++ b/public_html/lang/pt-br.lang.json
@@ -32,7 +32,7 @@
 		},
 		"btnNotifications": 	"Notificações",
 		"btnLang":				"Língua",
-		"menuMyAccount":		"Minha Conta",
+		"menuProfile":			"Minha Conta",
 		"menuInvoices":			"Faturas",
 		"menuSignOut":			"Sair",
 		"msgSelectLanguage":	"Por favor, selecione sua língua",
